# vast-csi

./: .dockerignore  .gitignore  .gitlab-ci.yml  .merge-chain  CHANGELOG.md  Makefile  NOTICE.txt  README.md  index.yaml  k8s_supported.txt  pyproject.toml
.github/workflows/: prepare_releaser_configuration.py  release.yml
charts/: README.md
charts/vastcosi/: Chart.yaml  README.md  values.yaml
charts/vastcsi/: Chart.yaml  (+3 more)
deployment/: test-apps.yaml  vast-csi.yaml
examples/: cosi-all-in-one.yaml  csi-app-inline.yaml  csi-clone.yaml  csi-pvc-from-snapshot.yaml  csi-restore.yaml  csi-snapshot.yaml  csi-storageclass.yaml  pod-with-ephemeral-volume.yaml  pod_with_ephemeral_volume.yaml  vast_credentials.yaml
future/: csi-vast-resizer.yaml  csi-vast-snapshotter.yaml
operator/: Dockerfile  PROJECT  bundle.Dockerfile  openshift.txt  watches.yaml
packaging/: Dockerfile  base.Dockerfile  base_Dockerfile  build.sh  build_image.sh  ci.Dockerfile  gen-operator-bundle.sh  operator.Dockerfile  operator_bundle.Dockerfile  push_multi_arch.sh  run_preflight.sh  sanity.sh  test-secrets.yaml
scripts/: aws_get_image_info.sh  aws_retag_image.sh  create-views.py  img_to_digest.sh  install_csi_sanity.sh  migrate-pv.py  migrate_vast_cluster.py  run_jenkins_job_etcd_prio_queue.py  start_nfs_server.sh
tests/: conftest.py  test_controller.py  test_cosi_privisioner.py  test_utils.py  test_vms_session.py
vast_csi/: __main__.py  configuration.py  csi_pb2.py  csi_pb2_grpc.py  csi_types.py  exceptions.py  logging.py  quantity.py  server.py  utils.py  vms_session.py  volume_builder.py
(+121 files in other folders)
