[tool.poetry]
name = "vast-data-csi-driver"
version = "2.5.0"
description = "VAST CSI Driver allows container orchestration frameworks such as Kubernetes to dynamically provision storage volumes on a VAST cluster."
authors = ["Ofer Koren <ofer.koren@vastdata.com>", "Volodymyr Boiko <volodymyr.boiko@vastdata.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "1.25.0"
grpcio-tools = "1.25.0"
ipython = "7.9.0"
ipython-genutils = "0.2.0"
prompt_toolkit = "2.0.9"
jedi = "0.15.1"
parso = "0.5.1"
pexpect = "4.7.0"
pickleshare = "0.7.5"
plumbum = "1.8.0"
protobuf = "4.25.1"
ptyprocess = "0.6.0"
Pygments = "2.4.2"
six = "1.13.0"
traitlets = "4.3.3"
wcwidth = "0.1.7"
real-easypy = "0.4.3"
psutil = "5.6.3"
requests = "2.32.3"
cryptography = "43.0.0"
pytest = "7.2.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["test_*.py", "*_test.py", "utest_*.py"]
